--- a/Scikit-Learn.ipynb
+++ b/Scikit-Learn.ipynb
@@ -2591,7 +2591,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "f5306c4d",
+   "id": "b07a3812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2601,7 +2601,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "33469a14",
+   "id": "73d15411",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9c0640e",
+   "id": "86133df5",
    "metadata": {},
    "source": [
     "What if the Ridge doesn't work or the score doesn't fit the needs?\n",
@@ -2652,7 +2652,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "265ef5c1",
+   "id": "6087703e",
    "metadata": {},
    "outputs": [
     {
@@ -2690,7 +2690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7d2ab5d",
+   "id": "cfc7c99a",
    "metadata": {},
    "source": [
     "## 2.2 Choosing an estimator for a classification problem\n",
@@ -2700,8 +2700,415 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "7c3d6e2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>241</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>123</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>110</td>\n",
+       "      <td>264</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>132</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>68</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>193</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>141</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>115</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>302</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>303 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+       "0     63    1   3       145   233    1        0      150      0      2.3   \n",
+       "1     37    1   2       130   250    0        1      187      0      3.5   \n",
+       "2     41    0   1       130   204    0        0      172      0      1.4   \n",
+       "3     56    1   1       120   236    0        1      178      0      0.8   \n",
+       "4     57    0   0       120   354    0        1      163      1      0.6   \n",
+       "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+       "298   57    0   0       140   241    0        1      123      1      0.2   \n",
+       "299   45    1   3       110   264    0        1      132      0      1.2   \n",
+       "300   68    1   0       144   193    1        1      141      0      3.4   \n",
+       "301   57    1   0       130   131    0        1      115      1      1.2   \n",
+       "302   57    0   1       130   236    0        0      174      0      0.0   \n",
+       "\n",
+       "     slope  ca  thal  target  \n",
+       "0        0   0     1       1  \n",
+       "1        0   0     2       1  \n",
+       "2        2   0     2       1  \n",
+       "3        2   0     2       1  \n",
+       "4        2   0     2       1  \n",
+       "..     ...  ..   ...     ...  \n",
+       "298      1   0     3       0  \n",
+       "299      1   0     3       0  \n",
+       "300      1   2     3       0  \n",
+       "301      1   1     3       0  \n",
+       "302      1   1     2       0  \n",
+       "\n",
+       "[303 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "heart_disease = pd.read_csv(\"heart-disease.csv\")\n",
+    "heart_disease"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d77d6aa",
+   "metadata": {},
+   "source": [
+    "Consulting the map and it says to try 'LinearSVC'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "692c2ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/soumo141/anaconda3/lib/python3.11/site-packages/sklearn/svm/_classes.py:32: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n",
+      "/Users/soumo141/anaconda3/lib/python3.11/site-packages/sklearn/svm/_base.py:1242: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8688524590163934"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the LinearSVC estimator class\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "# setup random seed\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Create the data\n",
+    "x = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"] \n",
+    "\n",
+    "# Split into train and test sets\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
+    "\n",
+    "# Instantiate LinearSVC\n",
+    "clf = LinearSVC()\n",
+    "clf.fit(x_train, y_train)\n",
+    "\n",
+    "# Evaluate the LinearSVC\n",
+    "clf.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "ea24f5f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "target\n",
+       "1    165\n",
+       "0    138\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heart_disease[\"target\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b8195929",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8524590163934426"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the RandomForestClassifier estimator class\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# setup random seed\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Create the data\n",
+    "x = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"] #median house price in $100,000s\n",
+    "\n",
+    "# Split into train and test sets\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
+    "\n",
+    "# Instantiate RandomForestClassifier\n",
+    "clf = RandomForestClassifier(n_estimators=100)\n",
+    "clf.fit(x_train, y_train)\n",
+    "\n",
+    "# Check the score of the nmodel (on the trainning data)\n",
+    "clf.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75205a9d",
+   "metadata": {},
+   "source": [
+    "Tidbit:<br>\n",
+    "    1. If you have structured data, use ensembled method<br>\n",
+    "    2. If you have unstructured data, use deep learning or transfer learning"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d8f6e87b",
+   "id": "b6a9db76",
    "metadata": {},
    "outputs": [],
    "source": []
