--- a/Scikit-Learn.ipynb
+++ b/Scikit-Learn.ipynb
@@ -2591,7 +2591,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b07a3812",
+   "id": "8bd0d75e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2601,7 +2601,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "73d15411",
+   "id": "659c4238",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86133df5",
+   "id": "0aafc349",
    "metadata": {},
    "source": [
     "What if the Ridge doesn't work or the score doesn't fit the needs?\n",
@@ -2652,7 +2652,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6087703e",
+   "id": "8bd88670",
    "metadata": {},
    "outputs": [
     {
@@ -2690,7 +2690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc7c99a",
+   "id": "7585d2ed",
    "metadata": {},
    "source": [
     "## 2.2 Choosing an estimator for a classification problem\n",
@@ -2701,7 +2701,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "7c3d6e2a",
+   "id": "61470f7c",
    "metadata": {},
    "outputs": [
     {
@@ -2977,7 +2977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d77d6aa",
+   "id": "efafc8e2",
    "metadata": {},
    "source": [
     "Consulting the map and it says to try 'LinearSVC'"
@@ -2986,7 +2986,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "692c2ba5",
+   "id": "87bccc6a",
    "metadata": {},
    "outputs": [
     {
@@ -3035,7 +3035,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "ea24f5f8",
+   "id": "79c81a3b",
    "metadata": {},
    "outputs": [
     {
@@ -3059,7 +3059,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b8195929",
+   "id": "b291330e",
    "metadata": {},
    "outputs": [
     {
@@ -3082,7 +3082,7 @@
     "\n",
     "# Create the data\n",
     "x = heart_disease.drop(\"target\", axis=1)\n",
-    "y = heart_disease[\"target\"] #median house price in $100,000s\n",
+    "y = heart_disease[\"target\"] \n",
     "\n",
     "# Split into train and test sets\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
@@ -3097,7 +3097,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75205a9d",
+   "id": "c7dcfaf4",
    "metadata": {},
    "source": [
     "Tidbit:<br>\n",
@@ -3106,12 +3106,247 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "413c98df",
+   "metadata": {},
+   "source": [
+    "## 3. Fit the model/algorithm on our data and use it to make predictions\n",
+    "\n",
+    "### 3.1 Fitting the model to the data\n",
+    "\n",
+    "Different names for:\n",
+    "* 'x' = features, features variables, data\n",
+    "* 'y' = labels, targets, target variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "1ea91373",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8524590163934426"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the RandomForestClassifier estimator class\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# setup random seed\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# Create the data\n",
+    "x = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"] \n",
+    "\n",
+    "# Split into train and test sets\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
+    "\n",
+    "# Instantiate RandomForestClassifier\n",
+    "clf = RandomForestClassifier(n_estimators=100\n",
+    "                             \n",
+    "# Fit the model to the data(trainning the machine learning model)\n",
+    "clf.fit(x_train, y_train)\n",
+    "\n",
+    "# Evaluate the RandomForestClassifier(use the patterns the model has learned)\n",
+    "clf.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "5174028f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+       "0   63    1   3       145   233    1        0      150      0      2.3      0   \n",
+       "1   37    1   2       130   250    0        1      187      0      3.5      0   \n",
+       "2   41    0   1       130   204    0        0      172      0      1.4      2   \n",
+       "3   56    1   1       120   236    0        1      178      0      0.8      2   \n",
+       "4   57    0   0       120   354    0        1      163      1      0.6      2   \n",
+       "\n",
+       "   ca  thal  \n",
+       "0   0     1  \n",
+       "1   0     2  \n",
+       "2   0     2  \n",
+       "3   0     2  \n",
+       "4   0     2  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "7dfdddbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "298    0\n",
+       "299    0\n",
+       "300    0\n",
+       "301    0\n",
+       "302    0\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.tail()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6a9db76",
+   "id": "14040b1a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 3.2 Make predictions using a"
+   ]
   }
  ],
  "metadata": {
