--- a/Scikit-Learn.ipynb
+++ b/Scikit-Learn.ipynb
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504b60b9",
+   "id": "0a2172ba",
    "metadata": {},
    "source": [
     "#### Build machine learning model\n",
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "eb08e791",
+   "id": "c75243e9",
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "a6971278",
+   "id": "76f92639",
    "metadata": {},
    "outputs": [
     {
@@ -3251,7 +3251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ec2ed17",
+   "id": "d63dc474",
    "metadata": {},
    "source": [
     "# KeyError: \"['target'] not found in axis\"\n",
@@ -4148,7 +4148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad90e6d0",
+   "id": "6fddfce2",
    "metadata": {},
    "source": [
     "## \"['target'] not found in axis\"from sklearn.ensemble import RandomForestRegressor\n",
@@ -5548,7 +5548,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "4b839d0f",
+   "id": "8bac3687",
    "metadata": {},
    "outputs": [
     {
@@ -5570,7 +5570,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "9e1f1fb7",
+   "id": "bf2c84f3",
    "metadata": {},
    "outputs": [
     {
@@ -5591,7 +5591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c532303d",
+   "id": "4765835b",
    "metadata": {},
    "source": [
     "### Mean Absolute Error (MAE)\n",
@@ -5603,7 +5603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aac9b354",
+   "id": "36bb6e5c",
    "metadata": {},
    "source": [
     "#### MAE\n",
@@ -5619,7 +5619,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0d171449",
+   "id": "18d5e5d4",
    "metadata": {},
    "outputs": [
     {
@@ -5742,7 +5742,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "5b6725e8",
+   "id": "5838a041",
    "metadata": {},
    "outputs": [
     {
@@ -5763,7 +5763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7e8af9f",
+   "id": "71dc6bbc",
    "metadata": {},
    "source": [
     "### Mean Squared Error (MSE)\n",
@@ -5773,7 +5773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4089e5bd",
+   "id": "4a1475ba",
    "metadata": {},
    "source": [
     "# Mean squared error\n",
@@ -5789,7 +5789,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "44c398f4",
+   "id": "02bcaf52",
    "metadata": {},
    "outputs": [
     {
@@ -5881,7 +5881,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "afaaf76f",
+   "id": "ac9a6dbb",
    "metadata": {},
    "outputs": [
     {
@@ -5904,7 +5904,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "c3c239c5",
+   "id": "29385c3a",
    "metadata": {},
    "outputs": [
     {
@@ -5933,7 +5933,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "bf04a722",
+   "id": "b618a26c",
    "metadata": {},
    "outputs": [
     {
@@ -6022,9 +6022,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7d34f2f",
+   "metadata": {},
+   "source": [
+    "## 4.2.3 Using the scoring parameter\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd87fd0",
+   "id": "2e8b5dbd",
    "metadata": {},
    "outputs": [],
    "source": []
